# msplotly

./: MANIFEST.in  pyproject.toml
src/msplotly/: app.py  arrows_plotly.py  layout.py  miscellaneous.py  msplotter.py  plotter.py  user_input.py
